--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 
         .logo {
             font-family: 'Bebas Neue', sans-serif;
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             letter-spacing: 3px;
             color: var(--gold-light);
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .subtitle {
-            font-size: 0.75rem;
+            font-size: 0.65rem;
             color: var(--text-secondary);
             letter-spacing: 1.5px;
             text-transform: uppercase;
@@ -496,11 +496,11 @@
            ============================================ */
         @media (max-width: 480px) {
             .logo {
-                font-size: 1.5rem;
+                font-size: 1.3rem;
             }
 
             .subtitle {
-                font-size: 0.7rem;
+                font-size: 0.6rem;
             }
 
             .tab-button {
@@ -554,11 +554,11 @@
             }
 
             .logo {
-                font-size: 1.3rem;
+                font-size: 1.2rem;
             }
 
             .subtitle {
-                font-size: 0.65rem;
+                font-size: 0.6rem;
             }
 
             .container {
@@ -578,7 +578,7 @@
          ============================================ -->
     <div class="header">
         <div class="logo">GOLF PRIMOS</div>
-        <div class="subtitle">Handicap Tracker v1.0.0</div>
+        <div class="subtitle">Handicap Tracker</div>
     </div>
 
     <!-- ============================================
