--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#0f5132">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="description" content="Golf Primos Handicap Tracker - Track golf scores, handicaps, and rankings for your crew">
+    <meta name="description" content="Golf Primos Handicap Tracker - Track golf scores, handicaps, and rankings for Primos">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;600;700;800&display=swap');
 
