--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Golf Primos - Handicap Tracker v1.0.0</title>
+    <title>Golf Primos - Handicap Tracker </title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0f5132">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -657,7 +657,7 @@
                     <strong style="color: var(--gold);">Golf Primos Handicap Tracker</strong><br>
                     Version 1.0.0<br>
                     <br>
-                    A progressive web app for tracking golf handicaps and scores for your crew.
+                    A progressive web app for tracking golf handicaps and scores for your Primos.
                 </p>
             </div>
         </div>
