--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                     <strong style="color: var(--gold);">Golf Primos Handicap Tracker</strong><br>
                     Version 1.0.0<br>
                     <br>
-                    A progressive web app for tracking golf handicaps and scores for your crew.
+                    A progressive web app for tracking golf handicaps and scores for the Primos.
                 </p>
             </div>
         </div>
